2007-04-17 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp: Added doc-comments for
	openvrml::script_node::set_metadata_listener_,
	openvrml::script_node::metadata_, and
	openvrml::script_node::metadata_changed_emitter_.

2007-04-17 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.cpp: Added doc-comment
	for openvrml::node_impl_util::abstract_node::self_t.

2007-04-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/bounding_volume.h
	(bounding_sphere): Changed parameter name to match doc-comment.

2007-04-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::load_url(const std::vector<std::string> &, const
	std::vector<std::string> &)): Doc-comment fixes.

2007-04-16 Braden McDaniel  <braden@endoframe.com>

	IndexedQuadSet seems to offer a superset of QuadSet's
	functionality (to the extent that it's not clear why the latter
	exists as a distinct node).  Changed names used in the
	implementation to reflect that it supports IndexedQuadSet.

	* src/libopenvrml/openvrml/browser.cpp
	(x3d_cad_geometry_component::do_add_to_scope(const
	openvrml::browser &, openvrml::scope &, size_t)): Changed URN for
	QuadSet to "urn:X-openvrml:node:IndexedQuadSet".
	* src/libopenvrml/openvrml/x3d_cad_geometry.cpp: Renamed
	quad_set_node to indexed_quad_set_node; renamed quad_set_metatype
	to indexed_quad_set_metatype.

2007-04-16 Braden McDaniel  <braden@endoframe.com>

	* examples/sdl_viewer.cpp
	(browser::do_get_resource(const std::string &)): Use the MIME type
	strings exported by libopenvrml.

2007-04-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/viewer.cpp: Doc-comment improvements.

2007-04-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp: Doc-comment
	improvements; use "class" when documenting friend classes.

2007-04-15 Braden McDaniel  <braden@endoframe.com>
